// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders Level  Level --->level = Familiar 1`] = `
<div
  className="level"
>
  <span />
  <span />
  <span
    className="empty"
  />
  <span
    className="empty"
  />
  <span
    className="empty"
  />
  <div
    className="levelName"
  >
    Familiar
  </div>
</div>
`;

exports[`renders Level  Level --->level = Proficient 1`] = `
<div
  className="level"
>
  <span />
  <span />
  <span />
  <span />
  <span
    className="empty"
  />
  <div
    className="levelName"
  >
    Proficient
  </div>
</div>
`;

exports[`renders Level  Level --->level = Understand 1`] = `
<div
  className="level"
>
  <span />
  <span
    className="empty"
  />
  <span
    className="empty"
  />
  <span
    className="empty"
  />
  <span
    className="empty"
  />
  <div
    className="levelName"
  >
    Understand
  </div>
</div>
`;
